some style fixes - remove unnecessary scrollbars etc

--- a/src/App.css
+++ b/src/App.css
@@ -98,14 +98,14 @@
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: blue orange;
+  /* scrollbar-color: blue orange; */
 }
 *::-webkit-scrollbar {
   width: 1px;
 }
 *::-webkit-scrollbar-track {
-  background: orange;
+  /* background: orange; */
 }
 *::-webkit-scrollbar-thumb {
-  background-color: blue;
+  /* background-color: blue; */
 }
